vlib/v/checker/tests/struct_ptr_cast_int_outside_unsafe_err.vv
struct Context {}

const b = 1

a := 1

_ = &Context(a)
_ = &Context(b)
_ = &Context(1)
